@startuml
namespace storage {
    class "Currency" << (S,Aquamarine) >> {
        + CurrencyCode string
        + Symbol string
        + Ascii string

    }
    class "Expense" << (S,Aquamarine) >> {
        + ExpenseID uint
        + Title string
        + Description string
        + CurrencyCode string
        + AmountCents int
        + StartDate time.Time
        + Occurrences int
        + IntervalUnit string
        + IntervalCount int
        + Currency Currency
        + Tags []Tag

    }
    class "Tag" << (S,Aquamarine) >> {
        + TagName string
        + Description string
        + Expenses []Expense

    }
}


"storage.Expense" o-- "storage.Currency"
"storage.Expense" o-- "storage.Tag"
"storage.Expense" o-- "time.Time"
"storage.Tag" o-- "storage.Expense"


@enduml
